created the static board page and the beginning of the contact form

--- a/app/views/static_pages/board.html.erb
+++ b/app/views/static_pages/board.html.erb
@@ -1,44 +1,85 @@
-Directors
+<div class="container">
+  <h4>Directors</h4>
+  <div>
+    <p>
+      The directors shall be responsible for the general management and supervision of the business and affairs of the Association except for those powers reserved to the members by the articles of organization or the bylaws.  The Board of Directors may delegate any of its powers to committees.  Each director shall perform such duties, including serving as chairperson of a committee, as determined, from time to time, by the Board of Directors.  Additional directors may be elected from time to time.
+    </p>
+  </div>
+  <div>
+    <p>Directors meet bi-monthly and each has a term of two years.</p>
+  </div>
+</div>
 
-The directors shall be responsible for the general management and supervision of the business and affairs of the Association except for those powers reserved to the members by the articles of organization or the bylaws.  The Board of Directors may delegate any of its powers to committees.  Each director shall perform such duties, including serving as chairperson of a committee, as determined, from time to time, by the Board of Directors.  Additional directors may be elected from time to time.
+<div class="container">
+  <div>
+    <h4>Officers</h4>
+    <div>
+      The officers are automatically directors, and serve two year terms.
+    </div>
+  </div>
+  <ul class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header active">
+        <h5>President</h5>
+      </div>
+      <div class="collapsible-body">
+        <p>
+          The President is the chief executive officer of the Association and is responsible for  the affairs of the Association, subject to the supervision of the board of directors. The President shall preside at all meetings at which he or she is present.  The president shall also have other powers and duties as customarily belonging to the office of president or as may be designated from time to time by the board of directors.
+        <br>
+        <br>
+          The president interacts with other Boston neighborhood associations and maintains a working relationship with the City of Boston departments.
+        <br>
+        <br>
+          Current President: Scott Mustard<br>
+          <a href="mailto:president@stbotolph.org">Contact via email.</a>
+        </p>
+      </div>
+    </li>
+    <li>
+      <div class="collapsible-header">
+        <h5>Vice President</h5>
+      </div>
+      <div class="collapsible-body">
+        <p>
+          The vice president shall have such powers and duties as may be designated from time to time by the board of directors or president.  The vice president shall have and may exercise all the powers and duties of the president during the absence of the president or in the event of his or her inability to act.
+          <br>
+          <br>
+          Current Vice President: Jason Tack<br>
+          <a href="mailto:vicepresident@stbotolph.org">Contact via email.</a>
+        </p>
+      </div>
+    </li>
+    <li>
+      <div class="collapsible-header">
+        <h5>Treasurer</h5>
+      </div>
+      <div class="collapsible-body">
+        <p>
+          The treasurer is the chief financial officer of the Association under the direction of the board of directors.  The treasurer shall keep full and accurate records of the financial affairs of the Association and keep them open to inspection by any director.  The treasurer shall also prepare and file in a timely manner all tax returns and financial reports as may be required by law.  The Treasurer shall prepare and distribute, at least semi-annually, a written accounting of the financial condition of the Association to the board of directors and another accounting to the members.
+          <br>
+          <br>
+          Current Treasurer: Rebecca Forkner, PhD <br>
+          <a href="mailto:treasurer@stbotolph.org">Contact via email.</a>
+        </p>
+      </div>
+    </li>
+    <li>
+      <div class="collapsible-header">
+        <h5>Clerk</h5>
+      </div>
+      <div class="collapsible-body">
+        <p>
+          The clerk shall record all minutes of the member meetings and the director meetings and shall have custody of the records (other than financial records) of the Association.  These archives shall also contain the Articles of Organization, bylaws of the Association, required state filings and the names of all members, directors and officers and the address of each.  The clerk shall make these records available for the inspection of any paid member.  The clerk shall prepare and file with the Secretary of State of the Commonwealth of Massachusetts an annual report and all other reports and certificates as required by law.
+          <br>
+          <br>
+          The clerk shall coordinate with the SBNA membership and communications chair for email and bulletin board notices.
+          <br>
+          <br>
+          Current Clerk: Tracey Hughes <br>
+          <a href="mailto:clerk@stbotolph.org">Contact via email.</a>
+        </p>
 
-Directors meet bi-monthly and each has a term of two years.
-
-
-
-Officers
-
-The officers are automatically directors, and serve two year terms.
-
-President
-
-The President is the chief executive officer of the Association and is responsible for  the affairs of the Association, subject to the supervision of the board of directors. The President shall preside at all meetings at which he or she is present.  The president shall also have other powers and duties as customarily belonging to the office of president or as may be designated from time to time by the board of directors.
-
-The president interacts with other Boston neighborhood associations and maintains a working relationship with the City of Boston departments.
-
-Current President: Scott Mustard
-Contact via email.
-
-Vice President
-
-The vice president shall have such powers and duties as may be designated from time to time by the board of directors or president.  The vice president shall have and may exercise all the powers and duties of the president during the absence of the president or in the event of his or her inability to act.
-
-Current Vice President: Jason Tack
-Contact via email.
-
-Treasurer
-
-The treasurer is the chief financial officer of the Association under the direction of the board of directors.  The treasurer shall keep full and accurate records of the financial affairs of the Association and keep them open to inspection by any director.  The treasurer shall also prepare and file in a timely manner all tax returns and financial reports as may be required by law.  The Treasurer shall prepare and distribute, at least semi-annually, a written accounting of the financial condition of the Association to the board of directors and another accounting to the members.
-
-Current Treasurer: Rebecca Forkner, PhD
-Contact via email.
-
-Clerk
-
-The clerk shall record all minutes of the member meetings and the director meetings and shall have custody of the records (other than financial records) of the Association.  These archives shall also contain the Articles of Organization, bylaws of the Association, required state filings and the names of all members, directors and officers and the address of each.  The clerk shall make these records available for the inspection of any paid member.  The clerk shall prepare and file with the Secretary of State of the Commonwealth of Massachusetts an annual report and all other reports and certificates as required by law.
-
-The clerk shall coordinate with the SBNA membership and communications chair for email and bulletin board notices.
-
-
-Current Clerk: Tracey Hughes
-Contact via email.c
+      </div>
+    </li>
+  </ul>
+</div>
