--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,57 +1,56 @@
-<div class="row">
-  <div class="col s12 usershow">
-    <div class="col s3 infocolumn">
-      <%= image_tag(@user_info.profphoto, class: "col s12 show-image") %>
-      <ul class="col s12 userdata">
-        <li class="col s5">Name:</li>
-        <li class="col s7"> <%= @user_info.fullname %></li>
-        <li class="col s5">Phone:</li>
-        <li class="col s7"> <%= @user_info.phone_number %></li>
-        <li class="col s5">Address:</li>
-        <li class="col s7"> <%= @user_info.full_address %></li>
-      </ul>
+<div class="row ushershow">
+  <div class="col s3 infocolumn">
+    <%= image_tag(@user_info.profphoto, class: "col s12 show-image") %>
+    <ul class="col s12 userdata">
+      <li class="col s5">Name:</li>
+      <li class="col s7"> <%= @user_info.fullname %></li>
+      <li class="col s5">Phone:</li>
+      <li class="col s7"> <%= @user_info.phone_number %></li>
+      <li class="col s5">Address:</li>
+      <li class="col s7"> <%= @user_info.full_address %></li>
+    </ul>
 
-      <%= link_to edit_user_registration_path, data: { position: "bottom", delay: "50", tooltip: "Edit profile" }, class: "right btn-floating btn-large waves-effect waves-light green btn tooltipped" do%>
-      <i class="material-icons">mode_edit</i>
+    <%= link_to edit_user_registration_path, data: { position: "bottom", delay: "50", tooltip: "Edit profile" }, class: "right btn-floating btn-large waves-effect waves-light green btn tooltipped" do%>
+    <i class="material-icons">mode_edit</i>
+    <% end %>
+  </div>
+  <div class="col s9 eventdata">
+    <div>
+      <h5 class="center-align">Events Attending</h5>
+      <% if @futureEventsAttending.empty? %>
+        You aren't registered for any upcoming events.
+      <% else %>
+        <div class="carousel" data-indicators="true">
+          <%  @futureEventsAttending.each do |f| %>
+            <%= link_to image_tag(f.picture, alt: f.title) ,event_path(f.id), class: "carousel-item col s8"%>
+          <% end %>
+        </div>
       <% end %>
     </div>
-    <div class="col s7">
-      <div>
-        <h5 class="center-align">Events Attending</h5>
-        <% if @futureEventsAttending.empty? %>
-          You aren't registered for any upcoming events.
-        <% else %>
-          <div class="carousel" data-indicators="true">
-            <%  @futureEventsAttending.each do |f| %>
-              <%= link_to image_tag(f.picture, alt: f.title) ,event_path(f.id), class: "carousel-item col s8"%>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-      <div>
-        <h5 class="center-align">Past Events Attended</h5>
-      </div>
-      <table class="highlight responsive-table" t>
-        <thead>
-          <tr>
-              <th data-field="title">Event</th>
-              <th data-field="Start">Start</th>
-              <th data-field="End">End</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% if !@pastEventsAttended.empty? %>
-            <% @pastEventsAttended.each do |event| %>
-              <tr>
-                <td><%= link_to event.title, event_path(event) %></td>
-                <td><%= event.start.strftime("%D %r") %></td>
-                <td><%= event.end.strftime("%D %r") %></td>
-              </tr>
-            <% end %>
-          <% end %>
-      </tbody>
-    </table>
-        <%= paginate @pastEventsAttended %>
+    <div>
+      <h5 class="center-align">Past Events Attended</h5>
     </div>
-</div>
+    <table class="highlight responsive-table" t>
+      <thead>
+        <tr>
+            <th data-field="title">Event</th>
+            <th data-field="Start">Start</th>
+            <th data-field="End">End</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if !@pastEventsAttended.empty? %>
+          <% @pastEventsAttended.each do |event| %>
+            <tr>
+              <td><%= link_to event.title, event_path(event) %></td>
+              <td><%= event.start.strftime("%D %r") %></td>
+              <td><%= event.end.strftime("%D %r") %></td>
+            </tr>
+          <% end %>
+        <% end %>
+    </tbody>
+  </table>
+      <%= paginate @pastEventsAttended %>
+  </div>
+
 </div>
